project('scylla', 'cpp', default_options: ['cpp_std=gnu++17'])

seastar_proj = subproject('seastar')
seastar_dep = seastar_proj.get_variable('seastar_dep')


scylla_core_srcs = [
    'database.cc',
    'table.cc',
    'atomic_cell.cc',
    'hashers.cc',
    'schema.cc',
    'frozen_schema.cc',
    'schema_registry.cc',
    'bytes.cc',
    'mutation.cc',
    'mutation_fragment.cc',
    'partition_version.cc',
    'row_cache.cc',
    'canonical_mutation.cc',
    'frozen_mutation.cc',
    'memtable.cc',
    'schema_mutations.cc',
    'supervisor.cc',
    'utils/logalloc.cc',
    'utils/large_bitset.cc',
    'utils/buffer_input_stream.cc',
    'utils/limiting_data_source.cc',
    'mutation_partition.cc',
    'mutation_partition_view.cc',
    'mutation_partition_serializer.cc',
    'mutation_reader.cc',
    'flat_mutation_reader.cc',
    'mutation_query.cc',
    'json.cc',
    'keys.cc',
    'counters.cc',
    'compress.cc',
    'sstables/mp_row_consumer.cc',
    'sstables/sstables.cc',
    'sstables/sstables_manager.cc',
    'sstables/mc/writer.cc',
    'sstables/sstable_version.cc',
    'sstables/compress.cc',
    'sstables/partition.cc',
    'sstables/compaction.cc',
    'sstables/compaction_strategy.cc',
    'sstables/compaction_manager.cc',
    'sstables/integrity_checked_file_impl.cc',
    'sstables/prepended_input_stream.cc',
    'sstables/m_format_read_helpers.cc',
    'transport/event.cc',
    'transport/event_notifier.cc',
    'transport/server.cc',
    'transport/messages/result_message.cc',
    'cql3/abstract_marker.cc',
    'cql3/attributes.cc',
    'cql3/cf_name.cc',
    'cql3/cql3_type.cc',
    'cql3/operation.cc',
    'cql3/index_name.cc',
    'cql3/keyspace_element_name.cc',
    'cql3/lists.cc',
    'cql3/sets.cc',
    'cql3/tuples.cc',
    'cql3/maps.cc',
    'cql3/functions/functions.cc',
    'cql3/functions/castas_fcts.cc',
    'cql3/statements/cf_prop_defs.cc',
    'cql3/statements/cf_statement.cc',
    'cql3/statements/authentication_statement.cc',
    'cql3/statements/create_keyspace_statement.cc',
    'cql3/statements/create_table_statement.cc',
    'cql3/statements/create_view_statement.cc',
    'cql3/statements/create_type_statement.cc',
    'cql3/statements/drop_index_statement.cc',
    'cql3/statements/drop_keyspace_statement.cc',
    'cql3/statements/drop_table_statement.cc',
    'cql3/statements/drop_view_statement.cc',
    'cql3/statements/drop_type_statement.cc',
    'cql3/statements/schema_altering_statement.cc',
    'cql3/statements/ks_prop_defs.cc',
    'cql3/statements/modification_statement.cc',
    'cql3/statements/parsed_statement.cc',
    'cql3/statements/property_definitions.cc',
    'cql3/statements/update_statement.cc',
    'cql3/statements/delete_statement.cc',
    'cql3/statements/batch_statement.cc',
    'cql3/statements/select_statement.cc',
    'cql3/statements/use_statement.cc',
    'cql3/statements/index_prop_defs.cc',
    'cql3/statements/index_target.cc',
    'cql3/statements/create_index_statement.cc',
    'cql3/statements/truncate_statement.cc',
    'cql3/statements/alter_table_statement.cc',
    'cql3/statements/alter_view_statement.cc',
    'cql3/statements/list_users_statement.cc',
    'cql3/statements/authorization_statement.cc',
    'cql3/statements/permission_altering_statement.cc',
    'cql3/statements/list_permissions_statement.cc',
    'cql3/statements/grant_statement.cc',
    'cql3/statements/revoke_statement.cc',
    'cql3/statements/alter_type_statement.cc',
    'cql3/statements/alter_keyspace_statement.cc',
    'cql3/statements/role-management-statements.cc',
    'cql3/update_parameters.cc',
    'cql3/ut_name.cc',
    'cql3/role_name.cc',
    'thrift/handler.cc',
    'thrift/server.cc',
    'thrift/thrift_validation.cc',
    'utils/runtime.cc',
    'utils/murmur_hash.cc',
    'utils/uuid.cc',
    'utils/big_decimal.cc',
    'types.cc',
    'validation.cc',
    'service/priority_manager.cc',
    'service/migration_manager.cc',
    'service/storage_proxy.cc',
    'cql3/operator.cc',
    'cql3/relation.cc',
    'cql3/column_identifier.cc',
    'cql3/column_specification.cc',
    'cql3/constants.cc',
    'cql3/query_processor.cc',
    'cql3/query_options.cc',
    'cql3/single_column_relation.cc',
    'cql3/token_relation.cc',
    'cql3/column_condition.cc',
    'cql3/user_types.cc',
    'cql3/untyped_result_set.cc',
    'cql3/selection/abstract_function_selector.cc',
    'cql3/selection/simple_selector.cc',
    'cql3/selection/selectable.cc',
    'cql3/selection/selector_factories.cc',
    'cql3/selection/selection.cc',
    'cql3/selection/selector.cc',
    'cql3/restrictions/statement_restrictions.cc',
    'cql3/result_set.cc',
    'cql3/variable_specifications.cc',
    'db/consistency_level.cc',
    'db/system_keyspace.cc',
    'db/system_distributed_keyspace.cc',
    'db/schema_tables.cc',
    'db/cql_type_parser.cc',
    'db/legacy_schema_migrator.cc',
    'db/commitlog/commitlog.cc',
    'db/commitlog/commitlog_replayer.cc',
    'db/commitlog/commitlog_entry.cc',
    'db/data_listeners.cc',
    'db/hints/manager.cc',
    'db/hints/resource_manager.cc',
    'db/config.cc',
    'db/extensions.cc',
    'db/heat_load_balance.cc',
    'db/large_data_handler.cc',
    'db/marshal/type_parser.cc',
    'db/batchlog_manager.cc',
    'db/view/view.cc',
    'db/view/view_update_generator.cc',
    'db/view/row_locking.cc',
    'index/secondary_index_manager.cc',
    'index/secondary_index.cc',
    'utils/UUID_gen.cc',
    'utils/i_filter.cc',
    'utils/bloom_filter.cc',
    'utils/bloom_calculations.cc',
    'utils/rate_limiter.cc',
    'utils/file_lock.cc',
    'utils/dynamic_bitset.cc',
    'utils/managed_bytes.cc',
    'utils/exceptions.cc',
    'utils/config_file.cc',
    'utils/gz/crc_combine.cc',
    'gms/version_generator.cc',
    'gms/versioned_value.cc',
    'gms/gossiper.cc',
    'gms/failure_detector.cc',
    'gms/gossip_digest_syn.cc',
    'gms/gossip_digest_ack.cc',
    'gms/gossip_digest_ack2.cc',
    'gms/endpoint_state.cc',
    'gms/application_state.cc',
    'gms/inet_address.cc',
    'dht/i_partitioner.cc',
    'dht/murmur3_partitioner.cc',
    'dht/byte_ordered_partitioner.cc',
    'dht/random_partitioner.cc',
    'dht/boot_strapper.cc',
    'dht/range_streamer.cc',
    'unimplemented.cc',
    'query.cc',
    'query-result-set.cc',
    'locator/abstract_replication_strategy.cc',
    'locator/simple_strategy.cc',
    'locator/local_strategy.cc',
    'locator/network_topology_strategy.cc',
    'locator/everywhere_replication_strategy.cc',
    'locator/token_metadata.cc',
    'locator/snitch_base.cc',
    'locator/simple_snitch.cc',
    'locator/rack_inferring_snitch.cc',
    'locator/gossiping_property_file_snitch.cc',
    'locator/production_snitch_base.cc',
    'locator/ec2_snitch.cc',
    'locator/ec2_multi_region_snitch.cc',
    'locator/gce_snitch.cc',
    'message/messaging_service.cc',
    'service/client_state.cc',
    'service/migration_task.cc',
    'service/storage_service.cc',
    'service/misc_services.cc',
    'service/pager/paging_state.cc',
    'service/pager/query_pagers.cc',
    'streaming/stream_task.cc',
    'streaming/stream_session.cc',
    'streaming/stream_request.cc',
    'streaming/stream_summary.cc',
    'streaming/stream_transfer_task.cc',
    'streaming/stream_receive_task.cc',
    'streaming/stream_plan.cc',
    'streaming/progress_info.cc',
    'streaming/session_info.cc',
    'streaming/stream_coordinator.cc',
    'streaming/stream_manager.cc',
    'streaming/stream_result_future.cc',
    'streaming/stream_session_state.cc',
    'clocks-impl.cc',
    'partition_slice_builder.cc',
    'init.cc',
    'lister.cc',
    'repair/repair.cc',
    'repair/row_level.cc',
    'exceptions/exceptions.cc',
    'auth/allow_all_authenticator.cc',
    'auth/allow_all_authorizer.cc',
    'auth/authenticated_user.cc',
    'auth/authenticator.cc',
    'auth/common.cc',
    'auth/default_authorizer.cc',
    'auth/resource.cc',
    'auth/roles-metadata.cc',
    'auth/passwords.cc',
    'auth/password_authenticator.cc',
    'auth/permission.cc',
    'auth/permissions_cache.cc',
    'auth/service.cc',
    'auth/standard_role_manager.cc',
    'auth/transitional.cc',
    'auth/authentication_options.cc',
    'auth/role_or_anonymous.cc',
    'auth/sasl_challenge.cc',
    'tracing/tracing.cc',
    'tracing/trace_keyspace_helper.cc',
    'tracing/trace_state.cc',
    'tracing/tracing_backend_registry.cc',
    'table_helper.cc',
    'range_tombstone.cc',
    'range_tombstone_list.cc',
    'disk-error-handler.cc',
    'duration.cc',
    'vint-serialization.cc',
    'utils/arch/powerpc/crc32-vpmsum/crc32_wrapper.cc',
    'querier.cc',
    'data/cell.cc',
    'multishard_writer.cc',
    'multishard_mutation_query.cc',
    'reader_concurrency_semaphore.cc',
    'distributed_loader.cc',
    'utils/utf8.cc',
    'utils/ascii.cc',
    'utils/like_matcher.cc',
]

scylla_core = static_library('scylla_core',
                             scylla_core_srcs,
                             dependencies: seastar_dep)
